--- a/package.xml
+++ b/package.xml
@@ -3,7 +3,7 @@
 <package format="3">
   <name>mypkg</name>
   <version>0.0.0</version>
-  <description>TODO: Package description</description>
+  <description>This is a program that counts up in 0.5 second increments.</description>
   <maintainer email="tutui1412kidkent@gmail.com">tutuikento</maintainer>
   <license>BSD-3-Clause</license>
   <exec_depend>rclpy</exec_depend>
